docs: updating swagger new route find_user
